# MatrixTest

./: .gitignore  MatrixTest.py  README.md  Utils.py  cmd_example_program.py  example.py  example_output.txt  example_output.xlsx  main.py  setup.cfg
MatrixTest/: MatrixTestRunner.py  Printers.py  Utils.py  __init__.py
MatrixTest/EmailService/: EmailProvider.py  MailjetProvider.py  __init__.py
docs/: EmailProvider.rst  EmailService.rst  MailjetProvider.rst  MatrixTest.rst  MatrixTestRunner.rst  Printers.rst  Utils.rst  conf.py  index.rst  modules.rst
