[metadata]
# replace with your username:
name = MatrixTest
version = 1.0.0
author = Quan Fan
author_email = qfan005@ucr.edu
description = A tool to facilitate matrix test via countless combination of arguments of a command line
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DavyVan/MatrixTest
project_urls =
    Bug Tracker = https://github.com/DavyVan/MatrixTest/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = MatrixTest
python_requires = >=3.7.1
install_requires =
    pandas
    colorama
    openpyxl

;[options.packages.find]
;where = MatrixTest